Fixed alignment in solution section

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -192,7 +192,7 @@ body {
       flex-direction: column;
       align-items: center;
 
-      text-align: center;
+      text-align: left;
     }
 
     #measures {
